--- a/src/components/header/mobile/mobile.css
+++ b/src/components/header/mobile/mobile.css
@@ -12,6 +12,7 @@
     border: 1px solid #ebebebee;
     align-items: center;
     justify-content: center;
+    z-index: 2;
 }
 .mobileLight {
     background-color: #ebebeb;
